tests/baselines/reference/functionCall10.errors.txt
==== tests/cases/compiler/functionCall10.ts (2 errors) ====
    function foo(...a:number[]){};
    foo(0, 1); 
    foo('foo'); 
        ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    foo();
    foo(1, 'bar');
           ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    